fix spoiler text-align (#11790)

--- a/res/css/views/rooms/_EventTile.pcss
+++ b/res/css/views/rooms/_EventTile.pcss
@@ -800,6 +800,7 @@ $left-gutter: 64px;
     font-size: inherit;
     font-family: inherit;
     line-height: inherit;
+    text-align: inherit;
 
     .mx_EventTile_spoiler_reason {
         color: $event-timestamp-color;
